# BinaryRealm

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
scripts/: generate-cmake-ninja.bat  generate-cmake-vs2022.bat
src/: README.md  main.cpp
src/app/: app.cpp  app.h  screen.cpp  screen.h  window.h
src/app/window_apis/: win32_api.cpp  win32_api.h
src/config/: config_manager.cpp  config_manager.h  keybinds.cpp  keybinds.h  settings_view.cpp  settings_view.h  static_configs.h  theme.cpp  theme.h
src/core/: assert.h  containers.h  filesystem_utils.cpp  filesystem_utils.h  network.cpp  network.h  network_imports.h  string.cpp  string.h  time.cpp  time.h
src/customization/: app_settings.cpp  app_settings.h  app_settings_serializer.h  background.cpp  background.h  font.h  generic_types_serializer.h  theme.cpp  theme.h  theme_serializer.h  widgets_settings_serializer.h
src/desktop/: background.cpp  background.h
src/graphics/: graphics.cpp  graphics.h  image.cpp  image.h
src/graphics/backends/: d3d11_api.cpp  d3d11_api.h
src/view/: animation.cpp  animation.h  view.cpp  view.h  viewpool.cpp  viewpool.h  widget.cpp  widget.h
src/view/views/: console_view.cpp  console_view.h  settings_view.cpp  settings_view.h  taskbar_view.cpp  taskbar_view.h  theme_selector_view.cpp  theme_selector_view.h
src/view/widgets/: date_widget.cpp  date_widget.h  network_widget.cpp  network_widget.h
